2004-04-28  Matthias Clasen  <mclasen@redhat.com>

	* gdk/gdkdraw.c (_gdk_drawable_get_scratch_gc): Docs typo fix.

Sun Apr 25 15:36:02 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtktoolbutton.c (gtk_tool_button_set_label_widget): Fix
	cut'n'paste-o from previous commit. (#141046, Torsten Schoenfeld).

2004-04-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Patch to add support for string conversion callbacks to
	GtkIMContextXIM (#101814)

	* modules/input/gtkimcontextxim.c: Set the string conversion callback
	if supported by the XIC.

	(struct _GtkIMContextXIM): Add string_conversion_callback member.

	(struct _GtkXIMInfo, setup_im): Check and keep flag inidicating
	whether string conversion callback is supported.

	(gtk_im_context_get_ic, +set_string_conversion_callback,
	+string_conversion_callback): Also initialize string conversion
	callback, if supported, along with the IC initialization.

	* modules/input/imxim.c: Make "xim" module default for Thai as well.

2004-04-23  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkclipboard.c (gtk_clipboard_wait_for_targets): Correctly
	initialize targets.  (#139883, John Finlay)

	* gdk/gdkdraw.c (gdk_draw_drawable): Small doc improvement. 

	* gtk/gtktreeselection.c (gtk_tree_selection_get_selected_rows): 
	Don't recommend gtk_tree_row_reference_new_proxy().  (#138309,
	Tim-Philipp Müller)

	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_cell_set_cell_data): 
	Remove an excessive g_return_if_fail().

	* gdk/x11/gdkevents-x11.c (set_user_time): Make set_user_time()
	static.
	* gdk/x11/gdkinput-x11.c (_gdk_input_common_other_event): 
	_-prefix calls of gdk_x11_window_set_user_time().

2004-04-22  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkuimanager.c (update_node): Make sure the separators 
	used to demarkate placeholder ends don't show up on 
	show_all().  (#140496, Murray Cumming)

	* gtk/gtkspinbutton.c (spin_button_at_limit): Make spinbuttons